# dtl-multiindexer-db-poc

./: .editorconfig  .gitattributes  .gitignore  README.md  WALKTHROUGH.md  diagram.html  docker-compose.yaml  package-lock.json  package.json
backend/: .env.example  Cargo.toml  Dockerfile  __init__.py  app.py  config.py  extensions.py  manage.py  requirements.txt  swagger.py  wsgi.py
backend/api/: Cargo.toml
backend/api/src/: auth.rs  handlers.rs  main.rs
backend/data/: opencbdc_ledger.json  opencbdc_validator3.json  opencbdc_validator4.json
backend/domain/: Cargo.toml
backend/event-listener/: Cargo.toml
backend/event-listener/src/: main.rs
backend/infra/: Cargo.toml  __init__.py  blockchain.py  db.py  event_listener.py  ipfs_client.py  opencbdc_storage.py  redis_client.py  scheduler.py  validator_logger.py  wallet_auth.py
backend/infra/src/: blockchain.rs  contract.rs  db.rs  ipfs.rs  lib.rs
backend/logs/: blockchain_report.txt  dtl-validator-1.txt  dtl-validator-2.txt  dtl-validator-3.txt  dtl-validator-4.txt  opencbdc_ledger.txt  transfers.txt
backend/models/: __init__.py  balance.py  event.py  transaction.py  user.py
backend/utils/: __init__.py  helpers.py
blockchain/: hardhat.config.ts  package.json  tsconfig.json
blockchain/cache/: solidity-files-cache.json
blockchain/contracts/: MoneyToken.sol
frontend/: index.html  package.json
infra/: compose.yaml
python-backend/: app.py  besu_api.py  ipfs_api.py  scheduler_api.py  transfer_api.py  users_api.py
scheduler/: Dockerfile  go.mod  go.sum  main.go  model.go  payment.go
sdk/: package.json
(+25 files in other folders)
