[package]
name = "dtl-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dtl-domain = { path = "../domain" }
dtl-infra = { path = "../infra" }

actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ethers = "2"
