[package]
name = "dtl-event-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
dtl-domain = { path = "../domain" }
dtl-infra = { path = "../infra" }

tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["ws", "rustls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
